# crabbyq

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
examples/: README.md  basic.rs  basic_mqtt.rs  basic_redis.rs  basic_rpc.rs  basic_state.rs  custom_error_rpc.rs  extractors.rs  graceful_shutdown.rs  jetstream.rs  middleware.rs  multirouter.rs  publishers.rs
src/: errors.rs  event.rs  extract.rs  handler.rs  lib.rs  publish.rs  response.rs  router.rs  service.rs
src/brokers/: base.rs  kafka.rs  mod.rs  mqtt.rs  nats.rs  redis.rs
src/examples/: basic.rs  kafka_rpc.rs  nats_rpc.rs
src/publish/: base.rs  mod.rs  mqtt.rs  nats.rs  redis.rs
src/routing/: base.rs  mod.rs  nats.rs
tests/: framework.rs  mqtt_integration.rs  nats_integration.rs  redis_integration.rs
tests/common/: mod.rs
