[package]
name = "crabbyq"
version = "0.1.0"
edition = "2024"
description = "Framework for routing events inspired by Faststream and axum."
authors = ["GrumpyChubbyCat lamantin-ai@yandex.ru"]

[dependencies]
anyhow = "1.0.99"
async-nats = "0.46.0"
async-trait = "0.1.89"
bytes = "1.10.1"
ciborium = "0.2.2"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.49.0", features = ["signal", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.3.22"

[lib]
crate-type = ["rlib"]
